# netw

./: CHANGELOG.md  netw.cabal
cbit/: cmsg.c  recv.c  recvmsg.c  send.c  sendmsg.c  socket.c  static_assertion.c
src/Netw/: Ancillary.hs  Inet.hs  Internal.hs  SockAddr.hsc  Socket.hs
src/Netw/Internal/: Ancillary.hsc  Cmsg.hsc  Enum.hsc  Port.hs  Protocols.hs  Socket.hs  Type.hsc
test/codegen/: Main.hs
test/msgs/: Client.hs  Main.hs  Server.hs
test/send-and-recv-msgs/: Main.hs
test/server-client/: Client.hs  Main.hs  Server.hs
test/unix-scm-rights/: Client.hs  Main.hs  Server.hs
