cabal-version:      3.4
name:               netw
version:            0.1.0.0
synopsis:           Binding to C socket API that can work with pinned and unpinned bytearrays.
description:        Provide functions to create and use sockets. The provided functions can work both on pointers and bytearrays.
                    Should work on any posix-compilant system, but have only been tested on linux.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Vu Hoang Hung
maintainer:         hoanghung17jan@gmail.com

-- copyright:
category:           Network
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    ghc-options:      -dth-dec-file
                      -ddump-splices
                      -ddump-to-file
                      -Wall

    import:           warnings

    exposed-modules:  Netw.Socket
                      Netw.SockAddr
                      Netw.Inet
                      Netw.Ancillary

    other-modules:    Netw.Internal
                      Netw.Internal.Port
                      Netw.Internal.Protocols
                      Netw.Internal.Ancillary
                      Netw.Internal.Socket
                      Netw.Internal.Enum
                      Netw.Internal.Cmsg
                      Netw.Internal.Type

    build-depends:    base ^>=4.17.2.1,
                      unix,
                      wide-word,
                      template-haskell,
                      primitive-unaligned,
                      primitive

    hs-source-dirs:   src

    c-sources:        cbit/sendmsg.c
                      cbit/send.c
                      cbit/recvmsg.c
                      cbit/recv.c
                      cbit/cmsg.c
                      cbit/socket.c
                      cbit/static_assertion.c
    default-language: GHC2021

test-suite client-server-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Client
                      Server
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/server-client
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        primitive,
        unix,
        netw

test-suite msgs-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Client
                      Server
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/msgs
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        primitive,
        unix,
        netw

test-suite unix-scm-rights-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Client
                      Server
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/unix-scm-rights
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        primitive,
        unix,
        netw

test-suite send-and-recv-msgs-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/send-and-recv-msgs
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        primitive,
        unix,
        netw
